修改 12.expression-list-of-oracle-mode.md

--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/6.expression-of-oracle-mode/12.expression-list-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/6.expression-of-oracle-mode/12.expression-list-of-oracle-mode.md
@@ -42,7 +42,7 @@ SELECT dept_id, MIN(salary) min, MAX(salary) max FROM emp
     ORDER BY dept_id, min, max;
 ```
 
-在 `GROUP BY` 子句的 `ROLLUP`、`CUBE` 和 `GROUPING SETS` 子句中，您可以在同一表达式列表中将单个表达式与表达式组结合。下例展示了一些在 SQL 语句中有效分组表达式列表：
+在 `GROUP BY` 子句的 `ROLLUP` 和 `GROUPING SETS` 子句中，您可以在同一表达式列表中将单个表达式与表达式组结合。下例展示了一些在 SQL 语句中有效分组表达式列表：
 
 ```sql
 SELECT prod_category, prod_subcategory, country_id, cust_city, count(*)
