--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
@@ -10,6 +10,14 @@ memory_limit
 | 取值范围             | \[0M, +∞) |
 | 是否重启 observer 进程生效 | 否         |
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <ul>
+  <li> 从 V4.1.0 BP1 版本开始取值范围由 [4G, +∞) 调整为 [1G, +∞)。  </li>
+  <li> 仲裁服务模式启动时，最低可设为 1G ；出于稳定性考虑，非仲裁服务模式启动时，最低依然为 4G。 </li>
+  </ul>
+</main>
+
 `memory_limit` 的默认值为 `0`。如果该值不为 `0`，则系统会忽略 `memory_limit_percentage` 的设置而优先使用 `memory_limit` 配置的值。例如，一台物理机的内存为 100 GB，`memory_limit_percentage` 设置为 `80`，表示使用 80% 的内存，而 `memory_limit` 参数设置为 `'90G'`，则实际物理机上 OceanBase 数据库可分配的内存使用 `memory_limit` 的配置，即 90 GB。
 
 使用注意事项：
