--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
@@ -7,7 +7,7 @@ memory_limit
 |------------------|-----------|
 | 参数类型             | 容量单位      |
 | 默认值              | 0         |
-| 取值范围             | \[0M, +∞) |
+| 取值范围             | [1G, +∞) |
 | 是否重启 observer 进程生效 | 否         |
 
 <main id="notice" type='explain'>
