社区版部署描述优化

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -19,11 +19,11 @@
   
 * OBD
 
-  OceanBase Deployer，OceanBase 集群安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/community-obd-cn-10000000001690019)。
+  OceanBase Deployer，OceanBase 集群安装部署工具，简称为 OBD。详细信息请参考 [OBD 文档](https://www.oceanbase.com/docs/obd-cn)。
   
 * ODP
 
-  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 ODP（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/community-odp-cn-10000000001717354)。
+  OceanBase Database Proxy，OceanBase 高性能反向代理服务器，简称为 ODP（又称为 OBProxy）。详细信息请参考 [ODP 文档](https://www.oceanbase.com/docs/odp-cn)。
 
 * OCP Express
   
@@ -74,7 +74,14 @@
 
 <main id="notice" type='notice'>
   <h4>注意</h4>
+  <ul>
+  <li>
   <p>以下内容以 x86 架构的 CentOS Linux 7.9 镜像作为环境，其他环境可能略有不同。</p>
+  </li>
+  <li>
+  <p>部署 OceanBase 集群之前，为了数据安全，建议您切换到非 root 用户。</p>
+  </li>
+  </ul>
 </main>
 
 ### 步骤一：（可选）下载并安装 all-in-one 安装包
@@ -108,8 +115,6 @@
    ```
 
 ### 步骤二：配置 OBD
-
-部署 OceanBase 集群之前，为了数据安全，建议您切换到非 root 用户。
 
 如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包。
 
@@ -309,7 +314,7 @@
         global:
           home_path: /home/admin/obagent
       ocp-express:
-        depeneds:
+        depends:
           - oceanbase-ce
           - obproxy-ce
           - obagent
@@ -320,6 +325,7 @@
           # The working directory for prometheus. prometheus is started under this directory. This is a required field.
           home_path: /home/oceanbase/ocp-server
           memory_size: 1G # The memory size of ocp-express server.  The recommend value is 512MB * (expect node num + expect tenant num) * 60MB.
+          admin_passwd: ********
           # logging_file_total_size_cap: 10G # The total log file size of ocp-express server
           # logging_file_max_history: 1 # The maximum of retention days the log archive log files to keep. The default value is unlimited
       ```
@@ -328,10 +334,10 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>本节中所使用命令的详细使用方法可参考 OBD 文档中的 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001690699">集群命令组</a>。</p>
+  <p>本节中所使用命令的详细使用方法可参考 OBD 文档中的 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000002049482">集群命令组</a>。</p>
 </main>
 
-1. 部署 OceanBase 数据库
+1. 部署 OceanBase 集群
 
    ```shell
    [admin@test001 ~]$ obd cluster deploy obtest -c all-components.yaml
@@ -339,7 +345,7 @@
 
    联网情况下，在您执行了 `obd cluster deploy` 命令之后，OBD 将检查您的目标机器是否有部署所需安装包。如果没有安装包，OBD 将自动从 YUM 源获取。
 
-2. 启动 OceanBase 数据库
+2. 启动 OceanBase 集群
 
    ```shell
    [admin@test001 ~]$ obd cluster start obtest
@@ -373,15 +379,19 @@
    [admin@test001 ~]$ obd cluster reload obtest
    ```
 
-### 步骤四：连接 OceanBase 数据库
+### 步骤四：连接 OceanBase 集群
 
-运行以下命令，使用 OBClient 客户端连接 OceanBase 数据库：
+运行以下命令，使用 OBClient 客户端连接 OceanBase 集群：
 
 ```shell
-obclient -h<IP> -P<PORT> -uroot@sys -p
+obclient -h<IP> -P<PORT> -uroot@sys -p -c -A
+# example
+obclient -h10.10.10.4 -P2883 -uroot@sys -p -c -A
 ```
 
-其中，`IP` 为 OBServer 节点的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 `mysql_port` 配置项的值，通过 ODP 连接时为 `listen_port` 配置项的值。
+其中，`IP` 为连接 OceanBase 数据库的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 mysql_port 配置项的值，通过 ODP 连接时为 listen_port 配置项的值。
+
+使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -398,8 +408,14 @@ obclient -h<IP> -P<PORT> -uroot@sys -p
 
   ```shell
   obd cluster tenant create <deploy name> [-n <tenant name>] [flags]
+  # example
+  obd cluster tenant create test -n obmysql --max-cpu=2 --memory-size=2G --log-disk-size=3G --max-iops=10000 --iops-weight=2 --unit-num=1 --charset=utf8
   ```
 
-  命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699) 中 `obd cluster tenant create` 命令。
+  该命令默认根据集群剩余全部可用资源创建租户，您可通过配置各个参数控制租户占用资源的多少，命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699) 中 `obd cluster tenant create` 命令。
 
 * 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
+
+## 相关文档
+
+您可执行 OBD 集群命令对 OBD 部署的集群进行管理，详细命令参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 一文。
