社区版部署优化

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -73,11 +73,15 @@
      </ul>
    </main>
 
+   将鼠标放置到白屏页面右上角 **中文** 字符处可根据显示的语种单击切换中英文页面。
+
+   <img width="858.9" height="297.5" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-01.png" alt="中英文">
+
 2. 部署配置
 
    **部署配置** 界面可以配置集群名称，部署类型和部署组件。
 
-   <img width="819.6" height="490.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-01.png" alt="部署配置">
+   <img width="824.4" height="571.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-02.png" alt="部署配置">
 
    其中：
 
@@ -95,17 +99,19 @@
 
    **节点配置** 界面可以配置数据库和组件节点，部署用户以及软件安装路径。
 
-   <img width="868.8" height="523.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-02.png" alt="节点配置">
+   <img width="858.9" height="667.1" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-03.png" alt="节点配置">
 
    其中：
 
    * 数据库节点默认为三个 Zone，可通过单击 **+ 新增 Zone** 或尾部的删除图标新增或删除 Zone。
 
-   * **OCPExpress 节点** 即可从下选框选择 OBServer 节点 IP，也可输入新的节点 IP，仅支持选择或输入一个节点。
+   * **OCP Express 节点** 既可从下选框选择 OBServer 节点 IP，也可输入新的节点 IP，仅支持选择或输入一个节点。
 
-   * **OBProxy 节点** 即可通过下选框选择 OBServer 节点 IP，也可输入新的节点 IP，支持配置多个节点。
+   * **OBProxy 节点** 既可通过下选框选择 OBServer 节点 IP，也可输入新的节点 IP，支持配置多个节点。
 
-   * **用户名** 默认为当前进程的启动用户，支持自定义，需输入对应用户的密码，如各节点间已配置免密可免去输入密码。
+   * **用户名** 默认为当前进程的启动用户，默认 SSH 端口为 22 端口，支持自定义用户和 SSH 端口。您需输入对应用户的密码，如各节点间已配置免密可免去输入密码。
+
+   * **软件路径** 默认为部署用户的家目录，可自定义修改。
 
    配置完成之后单击 **下一步** 可进入到 **集群配置** 页面。
 
@@ -113,17 +119,17 @@
 
    **集群配置** 界面可对集群进行配置，包括系统租户的管理员用户（root@sys）密码、数据和日志目录、数据库及各组件的端口和参数配置等。
 
-   <img width="788.4" height="549" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-03.png" alt="集群配置">
+   <img width="772.1" height="667.1" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-04.png" alt="集群配置">
 
    其中：
 
-   * **配置模式** 可选择 **最大占用** 或 **最小可用**，**最大占用** 模式将最大化利用环境资源，保证集群的性能与稳定性，推荐使用；**最小可用** 模式配置满足集群正常运行的资源参数。
+   * **模式配置** 可选择 **最大占用** 或 **最小可用**，**最大占用** 模式将最大化利用环境资源，保证集群的性能与稳定性，推荐使用；**最小可用** 模式配置满足集群正常运行的资源参数。两种模式的详细介绍可参考 [模式配置规则](https://www.oceanbase.com/docs/community-obd-cn-10000000002049477) 一文。
 
-   * root@sys 密码默认为 OBD 自动生成的随机字符串，可自定义设置。支持数字、英文、特殊字符，长度 8～32 之内，特殊字符仅支持「~!@#%^&*_-+=`|(){}[]:;',.?/」
+   * **root@sys 密码** 默认为 OBD 自动生成的随机字符串，可自定义设置。支持数字、英文、特殊字符，长度 8～32 之内，特殊字符仅支持「~!@#%^&*_-+=`|(){}[]:;',.?/」
 
    * 集群的数据目录和日志目录默认在 **节点配置** 页面中配置的软件路径下，需为以 `/` 开头的绝对路径，支持自定义设置，但需确保设置的目录为空。
 
-   * 数据库和各组件的端口均为默认值，可自定义设置（只支持 1024~65535 范围），需确保设置对的端口未被占用。
+   * 数据库和各组件的端口均为默认值，可自定义设置（仅支持 1024~65535 范围），需确保设置对的端口未被占用。
 
    * 单击打开 **更多配置** 按钮查看对应的集群或组件参数，可使用自动分配的配置，也可自定义各个参数。
 
@@ -135,26 +141,28 @@
 
    若预检查报错，您可根据页面建议选择 **自动修复** 或者单击 **了解更多方案** 跳转至错误码文档，参考文档自行修改。所有报错修改后，可单击 **重新检查** 再次进行预检查。
 
-   <img width="781.2" height="405.6" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-04.png" alt="预检查">
+   <img width="861.7" height="475.3" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-05.png" alt="预检查">
 
 6. 部署
 
    预检查通过后，单击 **部署** 即可开始 OceanBase 数据库的部署。
 
-   <img width="898.8" height="523.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-07.png" alt="部署">
+   <img width="780" height="549" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-06.png" alt="部署">
 
    其中：
 
    * 部署成功后可复制显示的连接串，在黑屏界面执行连接 OceanBase 数据库。
 
-   * 单击输出的 OCPExpress 组件的连接串可跳转到 OCP Express 的登录界面，通过界面展示的账号密码登录并修改密码后可使用白屏界面管理集群。
+   * 单击输出的 OCP Express 组件的连接串可跳转到 OCP Express 的登录界面，通过界面展示的账号密码登录并修改密码后可使用白屏界面管理集群。
 
      <main id="notice" type='explain'>
        <h4>说明</h4>
        <p>在阿里云或其他云环境下，可能出现程序无法获取公网 IP，从而输出内网地址的情况，此 IP 非公网地址，您需要使用正确的地址访问白屏界面。</p>
      </main>
 
-   * 将鼠标悬停在 **查看日志** 按钮后单击 **复制信息**，在命令行中粘贴该信息后执行可查看对应组件的日志位置。
+   * 在 **部署报告** 里单击对应组件前的展开图标即可在白屏页面查看部署的日志信息。
+
+   * 在 **部署报告** 里单击对应组件列表里的 **查看详情** 后，单击对应命令后的复制图标即可复制命令在中控机中执行查看对应组件的日志位置。
   
 7. 单击 **完成**，结束部署
 
@@ -193,7 +201,7 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
   
   如下图，在配置项 `java_bin` 中配置 Java 的真实路径，如 `/jdk8/bin/java`。
   
-   <img width="807.6" height="514.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-06.png" alt="更多配置">
+   <img width="860.3" height="641.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.1.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-07.png" alt="更多配置">
 
 * 方法二：将 Java 可执行文件软链接到 `/usr/bin/java` 中
   
