--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/5.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -11,7 +11,7 @@
 
 * 中控机器
 
-  存储 OceanBase 数据库安装包和集群配置信息的机器。
+  安装 OBD 的机器，用于管理 OceanBase 集群，存储 OceanBase 集群安装包和集群配置信息。
   
 * 目标机器
 
@@ -133,13 +133,13 @@
      <p>安装 all-in-one 安装包后默认关闭远程仓库，您可通过 <code>obd mirror list</code> 命令进行确认，查看 Type=remote 对应的 Enabled 变成了 False，说明已关闭远程镜像源。</p>
    </main>
 
-2. 将安装包添加至本地镜像
+2. 将安装包添加至本地镜像库
 
    ```shell
    [admin@test001 rpm]$ obd mirror clone *.rpm
    ```
 
-3. 查看本地镜像中安装包列表
+3. 查看本地镜像库中安装包列表
 
    ```shell
    [admin@test001 rpm]$ obd mirror list local
@@ -225,7 +225,7 @@
           cluster_id: 1
           # please set memory limit to a suitable value which is matching resource. 
           memory_limit: 64G # The maximum running memory for an observer
-          system_memory: 30G # The reserved system memory. system_memory is reserved for general tenants. The default value is 30G.
+          system_memory: 30G # The reserved system memory. system_memory is reserved for general tenants.
           datafile_size: 192G # Size of the data file. 
           log_disk_size: 192G # The size of disk space used by the clog files.
           enable_syslog_wf: false # Print system logs whose levels are higher than WARNING to a separate log file. The default value is true.
@@ -255,7 +255,7 @@
           zone: zone3
       ```
 
-      若机器中存在不一致的配置项，可将相关配置项移到对应 server 里进行配置，以其中两台机器中配置端口不同为例：
+      若机器中存在不一致的配置项，可将相关配置项移到对应 server 里进行配置，配置文件中对应 server 中的配置优先级高于 `global`。以其中两台机器中配置端口不同为例：
 
       ```yaml
       server2:
@@ -268,10 +268,25 @@
         zone: zone3 
       ```
 
-      <main id="notice" type='explain'>
-        <h4>说明</h4>
-        <p>配置文件中对应 server 中的配置优先级高于 <code>global</code>。</p>
-      </main>
+      |  配置项  |  是否必选  |  默认值  |  说明     |
+      |----------|-----------|----------|----------|
+      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip` 指定，多个机器就指定多次。 |
+      | devname  | 可选      | 无        | 和 `servers` 里指定的 IP 对应的网卡，通过 `ip addr` 命令可以查看 IP 和网卡对应关系。 |
+      | memory_limit  | 可选      | 0       | observer 进程能从环境中获取的最大内存，未配置的情况下以 `memory_limit_percentage` 配置项为准，配置项详细介绍请参考 [memory_limit](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md) 和 [memory_limit_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/137.memory_limit_percentage.md)。 |
+      | system_memory  | 可选      | 0M        | 保留的系统内存，该参数值会占用 `memory_limit` 的内存，未配置的情况下 OceanBase 数据库会自适应。 |
+      | datafile_size  | 可选      | 0        | 指定对应节点数据文件（block_file）大小，未配置的情况下以 `datafile_disk_percentage` 配置项为准，详细介绍请参考 [datafile_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/54.datafile_size.md) 和 [datafile_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/53.datafile_disk_percentage.md)。 |
+      | log_disk_size  | 可选      | 0        | 用于设置 Redo 日志磁盘的大小，未配置的情况下以`log_disk_percentage` 配置项为准，详细介绍请参考 [log_disk_size](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/237.log_disk_size.md) 和 [log_disk_percentage](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/238.log_disk_percentage.md)。 |
+      | enable_syslog_wf  | 可选      | true      | 设置是否把 WARN 以上级别的系统日志打印到一个单独的日志文件中。 |
+      | enable_syslog_recycle  | 可选      | false        | 指定是否自动回收系统日志，需要和 `max_syslog_file_count` 参数搭配使用，当 `max_syslog_file_count` 设置为非 0 值时才会生效。 |
+      | max_syslog_file_count  | 可选      | 0        | 设置在回收日志文件之前可以容纳的日志文件数量。值为 0 时表示不自动清理。 |
+      | ocp_meta_tenant  | 可选      | tenant_name: ocp</br>max_cpu: 1</br>memory_size: 2147483648        | 配置 OCP Express 所需的 meta 租户规格，ocp_meta_tenant 下的配置都会作为创建租户时的参数传入。</br>示例中仅列举了几个重要配置，具体可配置参数可参考创建租户命令支持的参数，详情请参见 OBD 文档 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000002049482) 中 **obd cluster tenant create** 命令介绍。 |
+      | mysql_port  | 必选      | 2881        | 设置 SQL 服务协议端口号，默认为 2881。OBClient 直连该端口可以访问该节点。 |
+      | rpc_port  | 必选      | 2882       | 设置远程访问的协议端口号，是 observer 进程跟其他节点进程之间的 RPC 通信端口，默认为 2882。 |
+      | home_path  | 必选      | 无       | OceanBase 数据库默认安装路径，建议在普通用户 admin 下。 |
+      | data_dir  | 可选      | $home_path/store       | 设置存储 SSTable 等数据的目录，建议配置为独立的磁盘。 |
+      | redo_dir  | 可选      | 默认与 `data_dir` 相同       | clog、ilog 和 slog 的目录，默认与 data_dir 值相同，建议配置为独立的磁盘。 |
+      | root_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为随机字符串       | OceanBase 集群的超级管理员（root@sys）的密码，建议设置复杂的密码。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
+      | proxyro_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为随机字符串      | ODP 连接 OceanBase 集群使用的账户名（proxyro@sys）的密码。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
 
    3. 配置 obproxy-ce 组件并修改 IP 和 `home_path`。
 
@@ -292,12 +307,20 @@
           observer_sys_password: ***** # proxyro user pasword, consistent with oceanbase-ce's proxyro_password, can be empty. When a depends exists, OBD gets this value from the oceanbase-ce of the depends.
       ```
 
-      <main id="notice" type='notice'>
-        <h4>注意</h4>
-        <p><code>observer_sys_password</code> 的值需设置为和 <code>proxyro_password</code> 的值相同，两者均表示 <code>proxyro@sys</code> 的密码。</p>
-      </main>
+      |  配置项  |  是否必选  |  默认值  |  说明     |
+      |----------|-----------|----------|----------|
+      | listen_port  | 必选      | 2883        | ODP 监听端口，默认 2883。 |
+      | prometheus_listen_port  | 必选       | 2884        | ODP prometheus 监听端口，默认 2884。 |
+      | home_path  | 必选       | 无       | ODP 安装路径，建议在普通用户 admin 下。 |
+      | obproxy_sys_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为随机字符串       | ODP 管理员账户（root@proxysys）的密码。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
+      | observer_sys_password  | 可选      | OBD V2.0.0 及之前版本默认为空</br>OBD V2.1.0 及之后版本默认为和 `proxyro_password` 相同的随机字符串        | ODP 连接 OceanBase 集群使用的账户名（proxyro@sys）的密码，配置密码需和 `observer_sys_password` 的值相同。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成和 `proxyro_password` 相同的随机字符串。 |
 
    4. 修改 obagent 和 ocp-express 组件的 IP 和 `home_path`。
+
+      <main id="notice" type='notice'>
+        <h4>注意</h4>
+        <p>OBD 自 V2.0.0 起支持部署 OCP Express，且 OBD V2.0.0 仅支持部署 OCP Express V1.0.0，OCP Express V1.0.1 及之后版本需使用 OBD V2.1.0 及之后版本部署。</p>
+      </main>
 
       ```yaml
       obagent:
@@ -326,9 +349,17 @@
           home_path: /home/oceanbase/ocp-server
           memory_size: 1G # The memory size of ocp-express server.  The recommend value is 512MB * (expect node num + expect tenant num) * 60MB.
           admin_passwd: ********
-          # logging_file_total_size_cap: 10G # The total log file size of ocp-express server
+          logging_file_total_size_cap: 10GB # The total log file size of ocp-express server
           # logging_file_max_history: 1 # The maximum of retention days the log archive log files to keep. The default value is unlimited
       ```
+
+      |  配置项  |  是否必选  |  默认值  |  说明     |
+      |----------|-----------|----------|----------|
+      | servers  | 必选      | 无        | 每个机器需要用 `- name: 机器标识名 (换行)ip: 机器 ip 指定`，多个机器就指定多次。 |
+      | home_path  | 必选       | 无       | 组件的安装路径，建议在普通用户 admin 下。 |
+      | memory_size  | 必选     | 无      | OCP Express 服务器的内存容量，推荐算法为：memory_size = 512MB +（期望的节点数 * 期望的租户数）* 60MB，期望的租户数需要包含 sys 和 ocp meta 租户本身。 |
+      | logging_file_total_size_cap  | 必选       | 1GB        | 日志文件总大小，默认为 1GB。<blockquote>**注意**：</br>该参数的单位需使用 GB 或 MB，若使用 G 或 M 单位会报错，无法成功部署 OCP Express。</blockquote> |
+      | admin_passwd  | 必选      | 无        | OCP 登录页面的 admin 账户密码，密码长度 8~32 位，至少包含 2 位数字、2 位大写字母、2 位小写字母和 2 位特殊字符（`~!@#%^&*_-+=|(){}[]:;,.?/)`）。使用 OBD V2.1.0 及之后版本时，未设置的情况下会自动生成随机字符串。 |
 
 ### 步骤三：部署 OceanBase 集群
 
